--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "scripts":{
+  "scripts": {
     "start": "vite"
   },
   "devDependencies": {
@@ -8,6 +8,8 @@
     "tailwindcss": "^3.4.14"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
     "vite": "^5.4.10"
   }
 }
